# QuizGame

./: .gitignore  LICENSE  README.md  data.py  main.py  quiz_brain.py  sandbox.py  setup.cfg
quizapp/data/: qdata.py
quizapp/gui/: ui.py
quizapp/quiz/: main.py
quizapp/quizbrain/: questions_model.py
src/quizapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/quizapp/data/: qdata.py
src/quizapp/gui/: ui.py
src/quizapp/quiz/: main.py  quiz_runner.py
src/quizapp/quizbrain/: quiz_brain.py
src/quizgame.egg-info/: PKG-INFO  SOURCES.txt
