[metadata]
name = quizapp
version = 0.0.3
author = Raj Verma
author_email = rjnshvrm23@gmail.com
description = A quiz game package with OOPS in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rajverma1985/QuizGame
package = quizapp
project_urls =
    Bug Tracker = https://github.com/rajverma1985/QuizGame/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28

[options.packages.find]
where = src
